# ParquetDB

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  _version.py  env.yml  env_dev.yml  env_material.yml  environment.yml  pyproject.toml  settings.py  setup.py
.github/experiment_workflows/: draft-pdf.yml
.github/scripts/: summarize_pr_commits.py  summarize_release-pr_comments.py
.github/workflows/: draft-pdf.yml  merge-pull-request-to-main.yml  on-release.yml  python-publish.yml  python_publish.yml  test-pull-requests.yml
benchmarking/mongodb/: read_write_benchmark.py
benchmarking/parquetdb/: read_write_benchmark.py
benchmarking/sqlite/: read_write_benchmark.py
benchmarks/: plotting_input_update_benchmarks.py  plotting_needle_in_haystack.py  plotting_read_write.py  plotting_results.py  plotting_update_full_results.py  plotting_update_into_constant_rows_results.py  plotting_update_results.py  plottting_alexandria.py
benchmarks/mongodb/: needle_in_haystack_benchmark.py  read_write_benchmark.py  update_benchmark.py
benchmarks/parquetdb/: experiment_benchmark.py  input_update_benchmark.py  needle_in_haystack_benchmark.py  optimized_update_benchmark.py  read_write_benchmark.py  schema_change_benchmark.py  update_benchmark.py  update_full_benchmark.py
benchmarks/sqlite/: needle_in_haystack_benchmark.py  read_write_benchmark.py  update_benchmark.py  update_full_benchmark.py
core/: parquetdb.py
dev_scripts/: empty_table_and_generator.py  parquetDataset.py  parquetdb_dev.py  testing_alexandria_import.py  testing_new_delete_method.py  testing_new_update_method.py  testing_ordering_table_fields.py  tmp.py
dev_scripts/issues/: dataset_test.py  parquetdb_test.py
dev_scripts/old_examples/: read_write_column_performance_expeirment.py  reads_benchmarking_tests.py  test.py
dev_scripts/old_scripts/: align_struct_field.py  empty_dict_issue.py  empty_table_and_generator.py  merging_schema.py  parquetDataset.py  parquetdb_dev.py  schema_modifier.py  table_modifier.py  testing_write_dataset.py  tmp.py
docs/: .buildinfo  CONTRIBUTING.html  Makefile  README.md  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: CONTRIBUTING.doctree  environment.pickle  index.doctree
docs/01_tutorials/: 01 - Getting Started.html  01 - Getting Started.ipynb  02 - Normalization.html  03 - Advanced Reads.html  03 - Advanced Reads.ipynb  04 - Supported Data Types.html  05 - Advanced Updates.html  05 - Advanced Updates.ipynb  06 - Adding Metadata.html  07 - Helper Methods.html  index.html
docs/02_internal/: 01 - parquetdb_internals.html  02 - parquet_file_format.html  index.html
docs/03_api/: index.html
docs/_sources/: CONTRIBUTING.rst.txt  index.rst.txt
docs/_static/: pygments.css
docs/examples/: index.html
docs/manim/: dataframe_flatten.py  (+1 more)
examples/: index.rst
joss/: ParquetDB.bib  paper.md
parquetdb/: __init__.py  _version.py  core.py  parquet_datasetdb.py  parquetdb.py  pyarrow_utils.py  types.py  utils.py
scripts/: run_pytest_continuously.py  run_tests.py  test_joins.py  tmp.py  utils.py  workflow_delete_release.py  workflow_generate_changlog_on_recent_tag.py  workflow_get_release_tag.py  workflow_update_release_body.py
tests/: test_parquet_datasetdb.py  test_parquetdb.py  test_parquetdb_manager.py  test_types.py
utils/: config.py  data_utils.py  matplotlib_utils.py  mp_utils.py
(+162 files in other folders)
