[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
local_scheme="no-local-version"
version_file = "parquetdb/_version.py"


[project]
name = "parquetdb"
authors = [
    {name = "Logan Lang", email = "lllang@mix.wvu.edu"},
    {name = "Aldo Romero", email = "Aldo.Romero@mail.wvu.edu"},
    {name = "Kamal Choudhary", email = "kamal.choudhary@nist.gov"},
    {name = "Eduardo Hernandez", email = "Eduardo.Hernandez@csic.es"}
]
description = "ParquetDB is a lightweight database-like system built on top of Apache Parquet files using PyArrow."
readme = {file = "README.md", content-type = "text/markdown"}  # Ensure this matches the file used
requires-python = ">=3.8"
keywords = ["parquet", "pyarrow", "data", 
            "storage", "schema evolution", "nested and complex data types", 
            "scalable", "database", "python"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

dependencies = [
    "python-dotenv",
    "pyarrow>=17.0.0",
    "pandas",
    "variconfig",
    "matplotlib",
    "beautifulsoup4",
    "requests",
    "dill",
    "pathos",
    "dask",
    "distributed",
    "platformdirs"
]

[project.optional-dependencies]

tests = [
    "pytest",
    "pytest-cov",
    "pymatgen"
]

docs= [
    "ipython",
    "imageio-ffmpeg",
    "sphinx",
    "myst_parser",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "nbsphinx",
    "sphinx_design",
    "sphinx-new-tab-link",
    "sphinxcontrib-youtube",
    "sphinxcontrib-video",
    "pandoc",
    "furo",
    "numpydoc"
]

dev = [
    "parquetdb[docs,tests]"
]



[project.urls]
Repository = "https://github.com/romerogroup/ParquetDB"
Issues = "https://github.com/romerogroup/ParquetDB/issues"
Changelog = "https://github.com/romerogroup/ParquetDB/CHANGELOG.md"



[tool.setuptools.packages.find]
where = ["."]
include = ["parquetdb*"]
exclude = ["parquetdb.tests*"]

